espace bloc prod02

--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -86,32 +86,40 @@
         </mj-column>
       </mj-section>
     </mj-wrapper>
-    <mj-section mj-class="bgW">
+    <mj-section padding="0">
       <mj-column>
         <mj-image padding="0" width="700px" src="./images/illustrationGS108E.png" alt=""/>
-        <mj-text padding="0" align="center" mj-class="T35-300 cP" line-height="42px">Des Switches de pointe</mj-text>
-        <mj-text padding="0" align="center" mj-class="T14-400 cT1" line-height="18px"><strong>Les switches NETGEAR non manageables sont les plus populaires</strong> auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.</mj-text>
-        <mj-text padding="0" align="center" mj-class="T14-400 cT1" line-height="18px"><strong>Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2.</strong> Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section mj-class="bgW">
-      <mj-group width="100%">
-        <mj-column vertical-align="middle">
-          <mj-image src="./images/gs108e.png" alt=""/>
+    <mj-wrapper padding="22px 50px 20px 50px" mj-class="bgW">
+      <mj-section padding="0">
+        <mj-column>
+          <mj-text padding="0" padding-bottom="20px" align="center" mj-class="T35-300 cP" line-height="42px">Des Switches de pointe</mj-text>
+          <mj-text padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px"><strong>Les switches NETGEAR non manageables sont les plus populaires</strong> auprès des petites entreprises. Au cours des 25 dernières années, nous avons vendu plusieurs millions de switches, dans le monde entier. Nos clients apprécient la fiabilité, la qualité de fabrication, la facilité d'installation et la rentabilité.</mj-text>
+          <mj-text padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px"><strong>Les switches Web manageables NETGEAR offrent des fonctionnalités avancées de niveau 2.</strong> Ils sont conçus pour les réseaux convergents où les données comme la voix ou la vidéo sont routées via une plateforme unique. Les fonctionnalités ACL, la QoS, l'agrégation de lien LACP et le protocole STP garantissent un environnement sécurisé & haut débit pour les besoins réseau de l'entreprise.</mj-text>
         </mj-column>
-        <mj-column vertical-align="middle">
-          <mj-text padding="0" mj-class="T24-500 cP" line-height="28px"><span style="text-transform:uppercase;">gs108e</span></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports <strong>Gigabit</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fonctionnalités <strong>d</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gestion des <strong>VLANs</strong></mj-text>
-          <mj-text padding="0" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> à vie</mj-text>
-          <mj-text padding="0" mj-class="T14-400 cP" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> gs108e-100eus</mj-text>
+      </mj-section>
+      <mj-section padding="0" padding-bottom="20px"> 
+        <mj-group>
+          <mj-column vertical-align="top">
+            <mj-image padding="0" width="250px" src="./images/gs108e.png" alt=""/>
+          </mj-column>
+          <mj-column vertical-align="top">
+            <mj-text padding="0" padding-bottom="15px" mj-class="T24-500 cP" line-height="28px"><span style="text-transform:uppercase;">gs108e</span></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports <strong>Gigabit</strong></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fonctionnalités <strong>d</strong></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gestion des <strong>VLANs</strong></mj-text>
+            <mj-text padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px">&#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Garantie :</strong> à vie</mj-text>
+            <mj-text padding="10px 0 5px 0" mj-class="T14-400 cP" line-height="20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Référence :</strong> gs108e-100eus</mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section padding="0" padding-bottom="20px">
+        <mj-column>
+          <mj-button mj-class="bgP">retrouvez toutes nos offres sur le switching</mj-button>
         </mj-column>
-      </mj-group>
-      <mj-column width="100%">
-        <mj-button mj-class="bgP">retrouvez toutes nos offres sur le switching</mj-button>
-      </mj-column>
-    </mj-section>
+      </mj-section>
+    </mj-wrapper>
     <mj-section mj-class="bgW">
       <mj-column>
         <mj-image padding="0" width="700px" src="./images/illustrationGS308P.png" alt=""></mj-image>
