espace bloc prod03

--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,18 +1,21 @@
-mj-section(mj-class="bgW")
+mj-section(padding="0")
     mj-column
         mj-image(padding="0" width="700px" src="./images/illustrationGS308P.png" alt="")
-        mj-text(padding="0" align="center" mj-class="T35-300 cP" line-height="42px") Alimentez vos périphériques via le PoE
-        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") La technologie PoE fournit une #[strong alimentation électrique et une connectivité réseau] pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
-mj-section(mj-class="bgW")
-    mj-group(width="100%")
-        mj-column(vertical-align="middle")
-            mj-image(src="./images/gs308p.png" alt="")
-        mj-column(vertical-align="middle")
-            mj-text(padding="0" mj-class="T24-500 cP" line-height="28px") #[span(style="text-transform:uppercase;") gs308p]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports #[strong Gigabit dont 4 PoE]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Budget PoE :] 53 W
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Non manageable]
-            mj-text(padding="0" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 3 ans
-            mj-text(padding="0" mj-class="T14-400 cP" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] GS308P-100EUS
-    mj-column(width="100%")
-        mj-button(mj-class="bgP") retrouvez toutes nos offres sur le switching poe
+mj-wrapper(padding="22px 50px 20px 50px" mj-class="bgW")
+    mj-section(padding="0")
+        mj-column 
+            mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T35-300 cP" line-height="42px") Alimentez vos périphériques via le PoE
+            mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px") La technologie PoE fournit une #[strong alimentation électrique et une connectivité réseau] pour les périphériques PoE via un câble réseau. Vous pouvez placer des appareils tels que des points d'accès WiFi, des caméras IP, des téléphones, des téléphones IP, des éclairages LED et des systèmes de sécurité, ... où bon vous semble car vous n'avez plus besoin d'alimentation électrique à proximité. Ces appareils sont alimentés et manageables via nos switches PoE, que ce soit au bureau ou à la maison.
+    mj-section(padding="0" padding-bottom="20px")
+        mj-column(vertical-align="top")
+            mj-image(padding="0" width="250px" src="./images/gs308p.png" alt="")
+        mj-column(vertical-align="top")
+            mj-text(padding="0" padding-bottom="15px" mj-class="T24-500 cP" line-height="28px") #[span(style="text-transform:uppercase;") gs308p]
+            mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8 ports #[strong Gigabit dont 4 PoE]
+            mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Budget PoE :] 53 W
+            mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Non manageable]
+            mj-text(padding="0" padding-bottom="5px" mj-class="T14-400 cT1" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Garantie :] 3 ans
+            mj-text(padding="10px 0 5px 0" mj-class="T14-400 cP" line-height="20px") &#8226;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#[strong Référence :] GS308P-100EUS
+    mj-section(padding="0" padding-bottom="20px")
+        mj-column
+            mj-button(mj-class="bgP") retrouvez toutes nos offres sur le switching poe
