--- a/src/includes/_conclusion.pug
+++ b/src/includes/_conclusion.pug
@@ -1,7 +1,9 @@
-mj-section(mj-class="bgW")
+mj-section(padding="0")
     mj-column
         mj-image(padding="0" width="700px" src="./images/29stockage.png" alt="")/
-        mj-text(padding="0" align="center" mj-class="T35-300 cT1" line-height="42px") Protégez vos données
-        mj-text(padding="0" align="center" mj-class="T14-400 cT1" line-height="18px") Toutes les entreprises produisent des données pour différents aspects de leur activité. #[strong La sauvegarde de ces données est essentielle pour tout plan opérationnel ou de continuité d'activité.] Si vous recherchez une solution de sauvegarde de données, ReadyNAS est la meilleure alternative pour les PME ayant un budget limité. Hautement évolutives, ces solutions sont fiables et offrent une sécurité exceptionnelle.
+mj-section(padding="22px 50px 20px 50px" mj-class="bgW")
+    mj-column
+        mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T35-300 cT1" line-height="42px") Protégez vos données
+        mj-text(padding="0" padding-bottom="20px" align="center" mj-class="T14-400 cT1" line-height="18px") Toutes les entreprises produisent des données pour différents aspects de leur activité. #[strong La sauvegarde de ces données est essentielle pour tout plan opérationnel ou de continuité d'activité.] Si vous recherchez une solution de sauvegarde de données, ReadyNAS est la meilleure alternative pour les PME ayant un budget limité. Hautement évolutives, ces solutions sont fiables et offrent une sécurité exceptionnelle.
         mj-button(mj-class="bgT1") retrouvez toutes nos offres sur le stockage
-        mj-text(padding="0" align="center" mj-class="T11-300 cT1" line-height="14px") * Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.
+        mj-text(padding="14px 0" align="center" mj-class="T11-300 cT1" line-height="14px") * Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.
